--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
     <div class="header">
         <nav>
-            <img width="150" src="assets/images/logo.svg" alt="" class="logo">
+            <img width="100" src="assets/images/logo.svg" alt="" class="logo">
             <div>
-                <button class="lang">English</button>
                 <button>Sign In</button>
             </div>
         </nav>
@@ -45,10 +44,9 @@
     </div>
     <!-- 2 -->
     <div class="features">
-        <div class="row">
+        <div class="row" id="one">
             <div class="img-col">
                 <img src="assets/images/mobile-0819.jpg" alt="">
-                <div class="box"></div>
             </div>
             <div class="text-col">
                 <h2>Download your shows to watch offline</h2>
@@ -63,7 +61,7 @@
     <!-- 3 -->
     <div class="features">
         <div class="row">
-            <div class="text-col" id="1">
+            <div class="text-col">
                 <h2>Watch everywhere</h2>
                 <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
             </div>
@@ -74,7 +72,7 @@
     </div>
     <!-- 4 -->
     <div class="features">
-        <div class="row">
+        <div class="row" id="two">
             <div class="img-col">
 
                 <img src="assets/images/kids.png" alt="">
